--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Mark Petersen - Product Designer</title>
-        <link rel="stylesheet" type="text/css" href="/css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <nav>
             <ul>
