updated file paths

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h3>Product Designer</h3>
                     </div>
                     <div class="heroContent">
-                        <img src="/images/me_prescott.png">
+                        <img src="images/me_prescott.png">
                     </div>
                 </section>
             </li>
@@ -54,11 +54,11 @@
                 <p><a href="mailto:mockpete@gmail.com">mockpete@gmail.com</a></p>
             </section>
                 <div class="vertical inline-block"></div>
-                <img src="/images/linkedin.png">
+                <img src="images/linkedin.png">
             
             <section class="footer-right">
-                <img src="/images/logo_48.png">
-                <img src="/images/copyright.png">2023
+                <img src="images/logo_48.png">
+                <img src="images/copyright.png">2023
             </section>
         </footer>
 
